New undo speedup: Modifier viewport visibility is not completely undone (missing update) #75542

Closed
opened 2020-04-09 02:53:30 +02:00 by Jesse Yurkovich · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-08 21:23, hash: 1239cab11f
Worked: Works with old undo code in all versions I've tested

Short description of error
If you toggle the Viewport visibility of a modifier, it will not be undone correctly. The visibility icon will correctly toggle on/off but the object will not be refreshed. Probably a missing depsgraph refresh flag.

This only occurs with the new Undo speedup code. Old code works fine.

Exact steps for others to reproduce the error

  • Enable the "Undo Speedup" experimental option in User preferences. Restart Blender after doing so!

  • Default scene

  • Add any modifier to the default cube (e.g. Subdivision or Bevel)

  • Toggle the Viewport visibility of the modifier 5 times

  • Undo 5 times (notice that each time you undo the visibility icon correctly changes, but the object does not)

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-08 21:23, hash: `1239cab11f` Worked: Works with old undo code in all versions I've tested **Short description of error** If you toggle the Viewport visibility of a modifier, it will not be undone correctly. The visibility icon will correctly toggle on/off but the object will not be refreshed. Probably a missing depsgraph refresh flag. This only occurs with the new Undo speedup code. Old code works fine. **Exact steps for others to reproduce the error** - Enable the "Undo Speedup" experimental option in User preferences. Restart Blender after doing so! - Default scene - Add any modifier to the default cube (e.g. Subdivision or Bevel) - Toggle the Viewport visibility of the modifier 5 times - Undo 5 times (notice that each time you undo the visibility icon correctly changes, but the object does not)
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin

Added subscribers: @mont29, @mano-wii

Added subscribers: @mont29, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Maybe without that option it works due to too many updates.

Maybe without that option it works due to too many updates.

This issue was referenced by 47084bac9f

This issue was referenced by 47084bac9f3c4c95b6fa3e3c3d5b1e661b2bec47

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-04-14 11:09:14 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75542
No description provided.